--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
       <!-- tutorial by https://www.youtube.com/watch?v=-2LtZRi6Q0s -->
       <title>Cryptocurrency Web App Design</title>
-      <link rel="stylesheet" href="/style/style.css">
+      <link rel="stylesheet" href="style/style.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
   
@@ -11,7 +11,7 @@
             <div class="menu">
                 <ul>
                     <!-- png by https://www.pngitem.com/middle/wTTwJw_ethereum-eth-icon-ethereum-png-transparent-png/# -->
-                    <li class="logo"><img src="/img/logo.png"></li>
+                    <li class="logo"><img src="img/logo.png"></li>
                     <li class="active">Home</li>
                     <li>Services</li>
                     <li>Product</li>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="app-picture">
-                    <img src="/img/artboard.png">
+                    <img src="img/artboard.png">
                     <!-- png by https://www.pngitem.com/middle/wTTmxT_graphic-design-hd-png-download></a> -->
                 </div>
             </div>
